Search with filters works. Fixing one behind bug.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -23,14 +23,14 @@
 
 .filters-container {
   height: 400px;
-  margin-left: 50px;
-  margin-right: 200px;
   display: flex;
   flex-direction: row;
+  background-color: orchid;
 }
 
 .categories-container {
-  padding-right: 20px;  
+  padding-right: 20px; 
+  padding-left: 60px; 
 }
 
 .status-container {
